--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=C##AZIZBEK
-spring.datasource.password=root
-
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
+spring.datasource.username=C##ULUGBEK
+spring.datasource.password=1111
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.output.ansi.enabled=always
+
+server.port=8080
 
