getArticle from slug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,8 @@
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
-spring.datasource.username=C##ULUGBEK
-spring.datasource.password=1111
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=C##BOBUR
+spring.datasource.password=root
+
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-spring.output.ansi.enabled=always
-
-server.port=8080
+spring.jpa.properties.hibernate.format_sql=true
 
