--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
-spring.datasource.username=C##ULUGBEK
-spring.datasource.password=1111
+spring.datasource.username=C##BOBUR
+spring.datasource.password=root
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 spring.jpa.hibernate.ddl-auto=none
