--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
-spring.datasource.username=C##BOBUR
+spring.datasource.username=C##AZIZBEK
 spring.datasource.password=root
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
@@ -7,6 +7,5 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.output.ansi.enabled=always
 
-server.port=8080
 
 
