--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,26 @@
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
-spring.datasource.username=C##ULUGBEK
+spring.datasource.url=jdbc:postgresql://localhost:5432/medium_clone
+spring.datasource.username=postgres
 spring.datasource.password=1111
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
 spring.output.ansi.enabled=always
-
 server.port=8080
+
+
+
+
+
+
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
+#spring.datasource.username=C##ULUGBEK
+#spring.datasource.password=1111
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.show-sql=true
+#spring.output.ansi.enabled=always
+#
+#server.port=8080
 
 
